* Add a save button to the wizard's table of object and association types. See bug:MID-10046[].
* Add an error message when the 'securityQuestionsForm' authentication module is the first in the authentication sequence. See bug:MID-10149[].
* bug:MID-10225[] Fix issue where opening of certification campaign stage hangs indefinitely.


=== Releases Of Other Components

* New version (1.5.2.0) of xref:/connectors/connectors/org.identityconnectors.databasetable.DatabaseTableConnector/[DatabaseTable Connector] was released and bundled with midPoint. The connector suggest all names of columns for configuration properties related with name of column.

* New version (2.8) of xref:/connectors/connectors/com.evolveum.polygon.connector.csv.CsvConnector/[CSV Connector] was released and bundled with midPoint. The connector suggest all names of columns for configuration properties related with name of column.
** Fixed NPE with multivalue attributes when delimiter is not defined. (bug:MID-8609[]).
** Fix UTF-8 BOM character in csv file during of discovery functions. (bug:MID-9497[] and bug:MID-9498[]).

* New version (3.8) of xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.LdapConnector/[AD/LDAP Connector] was released and bundled with midPoint. The connector suggest all names of columns for configuration properties related with name of column.
** Native association support.
** Possibility to choose attributes that should not be returned by default.
** Possibility to choose to encode string values in case of the presence of non standard ASCII characters.
** Workaround for open-ldap mandatory member attribute.
** Possibility to specify used auxiliary object classes in connector configuration.
** Allow to send the LDAP_DIRSYNC_OBJECT_SECURITY flag in Active Directory sync request control.

++++
{% include release-quality.html %}
++++

=== Limitations

Following list provides summary of limitation of this midPoint release.
